--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,12 @@
   "author": "MiniMax Agent",
   "license": "MIT",
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
+    "@google/generative-ai": "^0.21.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "groq-sdk": "^0.37.0",
     "lowdb": "7.0.1",
     "openai": "^4.28.0",
     "uuid": "^9.0.1"
