--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "npm install && vite",
-    "build": "npm install && rm -rf node_modules/.vite-temp && tsc -b && vite build",
-    "build:prod": "npm install && rm -rf node_modules/.vite-temp && tsc -b && BUILD_MODE=prod vite build",
+    "build": "npm install && tsc -b && vite build",
+    "build:prod": "npm install && tsc -b && BUILD_MODE=prod vite build",
     "lint": "npm install && eslint .",
     "preview": "npm install && vite preview",
     "install-deps": "npm install",
